--- a/src/app/photo-album-app/modules/photo-album/components/photo-albums-list/photo-albums-list.component.html
+++ b/src/app/photo-album-app/modules/photo-album/components/photo-albums-list/photo-albums-list.component.html
@@ -1,16 +1,20 @@
-<div class="container">
+<div class="container" *ngIf="user">
     <div class="headline-holder">
         <div class="headline">
             <p>
-                Foto albumi familije DINAMICKI  
+                Foto albumi familije {{ user.userName }}  
             </p>
         </div>
         <div class="button-holder">
-            <p>kube</p>
-            <p>line</p>
+            <p (click)="gridLayout = true" >kube</p>
+            <p (click)="gridLayout = false">line</p>
         </div>
     </div>
-    <div class="cards-holder">
-        <app-photo-card ngfor="let card of photoCards"></app-photo-card>
+    <div class="cards-holder" [ngClass]="gridLayout ? 'active' : 'inactive'">
+        <app-photo-card 
+        *ngFor="let card of albums" 
+        [card]="card"
+        [layout]="gridLayout"
+        ></app-photo-card>
     </div>
 </div>
