--- a/src/app/photo-album-app/scss/style.scss
+++ b/src/app/photo-album-app/scss/style.scss
@@ -1,12 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
-@import './_variables.scss';
+@import "./_variables.scss";
 
-body, html {
-    background-color: $color-background;
-    color: $color-text;
-    box-sizing: border-box;
-    min-height: 100vh;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-    margin: 0;
-    padding: 0;
+body,
+html {
+  background-color: $color-background;
+  color: $color-text;
+  box-sizing: border-box;
+  min-height: 100vh;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
+    Helvetica, Arial, "Lucida Grande", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+p {
+  margin: 0;
+  padding: 0;
+}
+a {
+    text-decoration: none;
 }
